<resources>
    <string name="app_name">Hangman</string>
    <string name="play">Play</string>
    <string name="lost">You Lost!!</string>
    <string name="won">You Won!!!</string>
    <string name="newGame">Start New Game</string>
    <string name="subtitle">Guess The Districts of Bangladesh</string>
    <string name="a">A</string>
    <string name="usedLetter">Used Letters: A, B, C, D, E, F, G</string>
    <string name="undersored">_ _ ABCD _ _ _ _</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="k">K</string>
    <string name="l">L</string>
    <string name="m">M</string>
    <string name="n">N</string>
    <string name="o">O</string>
    <string name="p">P</string>
    <string name="q">Q</string>
    <string name="r">R</string>
    <string name="s">S</string>
    <string name="t">T</string>
    <string name="u">U</string>
    <string name="v">V</string>
    <string name="w">W</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="hint">Hint</string>
</resources>