<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/game0"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/gameLostText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lost"
        android:textColor="@color/red"
        android:textSize="40sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"/>

    <TextView
        android:id="@+id/gameWinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/won"
        android:textColor="@color/red"
        android:textSize="40sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"/>

    <TextView
        android:id="@+id/wordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:letterSpacing="0.3"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:textSize="26sp"
        android:text="@string/undersored"/>

    <TextView
        android:id="@+id/usedLetterText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/wordText"
        android:gravity="center"
        android:text="@string/usedLetter"
        android:textSize="20sp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/letterLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/usedLetterText">

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:flow_wrapMode="chain"
            app:constraint_referenced_ids="a, b, c, d, e, f, g, h, i"/>

        <TextView
            android:id="@+id/a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/a"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/b"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/c"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/d"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/e"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/e"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/f"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/g"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/g"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/h"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/i"
            android:textStyle="bold"/>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:flow_wrapMode="chain"
            app:constraint_referenced_ids="j, k, l, m, n, o, p, q, r"
            app:layout_constraintTop_toBottomOf="@+id/flow1"/>

        <TextView
            android:id="@+id/j"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/j"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/k"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/l"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/m"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/m"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/n"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/n"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/o"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/o"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/p"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/q"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/q"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/r"
            android:textStyle="bold"/>

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:flow_wrapMode="chain"
            app:constraint_referenced_ids="s, t, u, v, w, x, y, z"
            app:layout_constraintTop_toBottomOf="@+id/flow2"/>

        <TextView
            android:id="@+id/s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/s"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/t"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/u"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/u"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/v"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/v"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/w"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/w"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/x"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/y"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/y"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/z"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="10dp"
            android:textSize="24sp"
            android:text="@string/z"
            android:textStyle="bold" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="5dp"
        android:background="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/letterLayout"/>

    <TextView
        android:id="@+id/hintText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:text="@string/hint"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/newGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/newGame"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hintText"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>